--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -15,39 +15,9 @@
     <properties>
         <jedis.redis.client>2.4.0</jedis.redis.client>
         <spring.data.redis.version>1.2.1.RELEASE</spring.data.redis.version>
-
-        <maven.checkstyle.plugin>2.7</maven.checkstyle.plugin>
-        <maven.cobertura.plugin>2.5.1</maven.cobertura.plugin>
-        <maven.jxr.plugin>2.3</maven.jxr.plugin>
-        <maven.taglist.plugin>2.4</maven.taglist.plugin>
-        <maven.versions.plugin>1.3.1</maven.versions.plugin>
-        <maven.surefire.plugin>2.12.4</maven.surefire.plugin>
-        <maven.javadoc.plugin>2.9</maven.javadoc.plugin>
-        <maven.change.log.plugin>2.2</maven.change.log.plugin>
-        <maven.project.info.reports.plugin>2.6</maven.project.info.reports.plugin>
-        <maven.qalab.plugin>2.2</maven.qalab.plugin>
-        <maven.jdepend.plugin>2.0</maven.jdepend.plugin>
-        <maven.bundle.plugin.version>2.3.5</maven.bundle.plugin.version>
-        <maven.resources.plugin.version>2.4.1</maven.resources.plugin.version>
-        <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
-        <maven.release.plugin.version>2.2.2</maven.release.plugin.version>
-        <maven.build.helper.plugin.version>1.7</maven.build.helper.plugin.version>
-        <maven.surefire.plugin.version>2.10</maven.surefire.plugin.version>
-        <maven.failsafe.plugin.version>2.13</maven.failsafe.plugin.version>
-        <maven.findbugs.plugin.version>2.3.2</maven.findbugs.plugin.version>
-        <maven.pmd.plugin.version>2.5</maven.pmd.plugin.version>
-        <eclipse.lifecycle.mapping.version>1.0.0</eclipse.lifecycle.mapping.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <targetJdk>1.6</targetJdk>
-        <commons-lang-version>2.6</commons-lang-version>
-        <!-- <slf4j-version>1.6.2</slf4j-version> -->
-
-        <!-- test setings -->
-        <skip.unit.test>true</skip.unit.test>
-        <skip.it.test>true</skip.it.test>
     </properties>
-    <dependencies>
 
+    <dependencies>
         <!-- REDIS DEPENDENCIES -->
         <dependency>
             <groupId>redis.clients</groupId>
@@ -63,37 +33,62 @@
             <version>${spring.data.redis.version}</version>
         </dependency>
 
+        <!-- Spring dependencies -->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <!-- Dependencies for tests -->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        -->
     </dependencies>
 
     <build>
         <defaultGoal>install</defaultGoal>
 
-        <resources>
-            <resource>
-                <directory>${pom.basedir}/src/main/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>**/osgi-*.xml</include>
-                    <include>**/mavenProps.properties</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>${pom.basedir}/src/main/resources</directory>
-                <filtering>false</filtering>
-                <excludes>
-                    <exclude>**/osgi-*.xml</exclude>
-                    <exclude>**/mavenProps.properties</exclude>
-                </excludes>
-            </resource>
-        </resources>
-
         <testResources>
             <testResource>
                 <directory>${pom.basedir}/src/test/resources</directory>
-                <filtering>true</filtering>
-            </testResource>
-            <testResource>
-                <directory>${pom.basedir}/src/it/resources</directory>
                 <filtering>true</filtering>
             </testResource>
         </testResources>
@@ -101,298 +96,10 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>${maven.resources.plugin.version}</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>filter</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>resources</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
-                <configuration>
-                    <source>${targetJdk}</source>
-                    <target>${targetJdk}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven.release.plugin.version}</version>
-                <configuration>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>${maven.build.helper.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <phase>generate-test-sources</phase>
-                        <goals>
-                            <goal>add-test-source</goal>
-                            <goal>add-test-resource</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${basedir}/src/it/java</source>
-                            </sources>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/src/it/resources</directory>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <skipTests>${skip.unit.test}</skipTests>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven.failsafe.plugin.version}</version>
-                <configuration>
-                    <failIfNoTests>true</failIfNoTests>
-                    <testFailureIgnore>false</testFailureIgnore>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
-
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <!-- TEMPORARY SKIP -->
-                    <skipITs>${skip.it.test}</skipITs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>failsafe-integration-tests</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>failsafe-verify</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <executions>
-                    <execution>
-                        <id>package-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
 
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>${eclipse.lifecycle.mapping.version}</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.codehaus.mojo</groupId>
-                                        <artifactId>build-helper-maven-plugin</artifactId>
-                                        <versionRange>0.8.2</versionRange>
-                                        <goals>
-                                            <goal>add-test-source</goal>
-                                            <goal>add-test-resource</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <execute>
-                                            <runOnIncremental>false</runOnIncremental>
-                                        </execute>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changelog-plugin</artifactId>
-                <version>${maven.change.log.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <outputEncoding>utf-8</outputEncoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>${maven.findbugs.plugin.version}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <threshold>Normal</threshold>
-                    <effort>Max</effort>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>${maven.pmd.plugin.version}</version>
-                <configuration>
-                    <targetJdk>${targetJdk}</targetJdk>
-                    <aggregate>true</aggregate>
-                    <sourceEncoding>UTF-8</sourceEncoding>
-                    <!-- The minimum tokens before a violation -->
-                    <minimumTokens>100</minimumTokens>
-                    <!-- Turn off if no xref report -->
-                    <linkXRef>true</linkXRef>
-                    <verbose>true</verbose>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>${maven.surefire.plugin}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>${maven.project.info.reports.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>
-            <!-- <plugin> -->
-            <!-- <groupId>org.apache.maven.plugins</groupId> -->
-            <!-- <artifactId>maven-checkstyle-plugin</artifactId> -->
-            <!-- <version>${maven.checkstyle.plugin}</version> -->
-            <!-- <configuration> -->
-            <!-- <aggregate>true</aggregate> -->
-            <!-- <consoleOutput>false</consoleOutput> -->
-            <!-- </configuration> -->
-            <!-- </plugin> -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>${maven.jxr.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
-                <version>${maven.taglist.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <tags>
-                        <tag>TODO</tag>
-                        <tag>@todo</tag>
-                        <tag>FIXME</tag>
-                        <tag>@fixme</tag>
-                    </tags>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>${maven.cobertura.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <outputDirectory>%{project.reporting.outputDirectory}/cobertura</outputDirectory>
-                    <formats>
-                        <format>xml</format>
-                        <format>html</format>
-                    </formats>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>${maven.versions.plugin}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>net.objectlab</groupId>
-                <artifactId>mvn-qalab-plugin</artifactId>
-                <version>${maven.qalab.plugin}</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>report-merge-chart</report>
-                            <report>report-movers-all</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-                <version>${maven.jdepend.plugin}</version>
-            </plugin>
-        </plugins>
-    </reporting>
-
-    <distributionManagement>
-        <repository>
-            <id>localNexus</id>
-            <name>localNexus</name>
-            <url>http://52.17.32.123:8081/nexus/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>localNexus</id>
-            <name>localNexus</name>
-            <url>http://52.17.32.123:8081/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
