--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,7 @@
 				<artifactId>activiti-fluent-tests</artifactId>
 				<version>0.3</version>
 				<scope>test</scope>
+				<type>jar</type>
 			</dependency>
 
 		</dependencies>
