--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -329,6 +329,7 @@
 		<dependency>
 			<groupId>com.plexiti.activiti</groupId>
 			<artifactId>activiti-fluent-tests</artifactId>
+			<version>0.3</version>
 			<scope>test</scope>
 		</dependency>
 		
