--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -254,6 +254,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>1.3.176</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -279,12 +280,14 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
+			<version>2.4.0</version>
 		</dependency>
 
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
+			<version>4.0.6.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -302,6 +305,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -313,11 +317,18 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.11</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-servlet</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
+			<version>3.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -329,16 +340,9 @@
 		<dependency>
 			<groupId>com.plexiti.activiti</groupId>
 			<artifactId>activiti-fluent-tests</artifactId>
+			<version>0.3</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-servlet</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
