--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -18,6 +18,9 @@
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
     </repositories>
+    <properties>
+        <activity.version>5.17.0</activity.version>
+    </properties>
     <modules>
         <module>wf-dniprorada-core</module>
         <module>wf-dniprorada-process</module>
