--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -25,5 +25,8 @@
     "requirejs": "~2.1.17",
     "angularAMD": "~0.2.1",
     "pt-sans": "*"
+  },
+  "resolutions": {
+	"angular": "~1.3.15"
   }
 }
