--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -6,7 +6,7 @@
     <parent>
          <groupId>org.egov-ua</groupId>
         <artifactId>org.egov-ua</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
 	<groupId>ua.org.bankid.oauth</groupId>
