--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.activiti</groupId>
-	<name>WorkFlows DniproRada UA/</name>
-	<artifactId>wf-dniprorada</artifactId>
+	<name>WorkFlows Central UA/</name>
+	<artifactId>wf-central</artifactId>
 	<version>5.17.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
