--- a/central-js/package.json
+++ b/central-js/package.json
@@ -4,6 +4,10 @@
   "devDependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express": "^1.4.1",
+    "grunt-express-server": "^0.5.1",
     "request": "^2.55.0"
   }
 }
