--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!--<parent>-->
-         <!--<groupId>org.egov-ua</groupId>-->
-        <!--<artifactId>org.egov-ua</artifactId>-->
-        <!--<version>1.0-SNAPSHOT</version>-->
-    <!--</parent>-->
+    <parent>
+         <groupId>org.egov-ua</groupId>
+        <artifactId>org.egov-ua</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
 	<groupId>ua.org.bankid.oauth</groupId>
 	<artifactId>bankid-oauth</artifactId>
