--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -23,8 +23,7 @@
     "angular-ui-router": "~0.2.13",
     "ui-router-extras": "~0.0.13",
     "requirejs": "~2.1.17",
-    "angularAMD": "~0.2.1",
-    "pt-sans": "*"
+    "angularAMD": "~0.2.1"
   },
   "resolutions": {
 	"angular": "~1.3.15"
