--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<activity.version>5.17.0</activity.version>
+		<guava-version>15.0</guava-version>
 	</properties>
 
 	<repositories>
@@ -309,6 +310,12 @@
 			<artifactId>jedis</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava-version}</version>
+        </dependency>
 
 		<!-- Testing -->
 		<dependency>
