--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -23,9 +23,10 @@
     "angular-ui-router": "~0.2.13",
     "ui-router-extras": "~0.0.13",
     "requirejs": "~2.1.17",
-    "angularAMD": "~0.2.1"
+    "angularAMD": "~0.2.1",
+    "angular-messages": "~1.3.15"
   },
   "resolutions": {
-	"angular": "~1.3.15"
+    "angular": "~1.3.15"
   }
 }
