--- a/central-js/package.json
+++ b/central-js/package.json
@@ -11,7 +11,7 @@
     "grunt-express-server": "^0.5.1",
     "request": "^2.55.0"
     "multer": "^0.1.8",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
     "lodash": "~3.8.0"
   }
 }
