--- a/dashboard-js/package.json
+++ b/dashboard-js/package.json
@@ -24,7 +24,8 @@
     "external-ip":"0.2.3",
     "request":"2.54.0",
     "xml2js":"0.4.6",
-    "log4js":"0.6.22"
+    "log4js":"0.6.22",
+    "caller-id":"0.1.0"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
