--- a/central-js2/bower.json
+++ b/central-js2/bower.json
@@ -14,7 +14,12 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-i18n": "~1.4.1",
+    "angular-messages": "~1.4.1",
+    "jquery.cookie": "~1.4.1",
+    "ng-clip": "~0.2.6",
+    "zeroclipboard": "~2.2.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
