--- a/central-js/package.json
+++ b/central-js/package.json
@@ -41,6 +41,7 @@
     "time-grunt": "~0.3.1",
     "karma": "~0.12.9",
     "supertest": "~0.11.0",
-    "should": "~3.3.1"
+    "should": "~3.3.1",
+    "nock": "2.7.0"
   }
 }
