--- a/central-js2/package.json
+++ b/central-js2/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "central-js",
-  "version": "0.0.0",
+  "name": "igovua",
+  "version": "0.1.0",
   "main": "server/app.js",
   "dependencies": {
-    "express": "~4.0.0",
+    "express": "^4.12.3",
+    "body-parser": "^1.12.3",
     "morgan": "~1.0.0",
-    "body-parser": "~1.5.0",
+    "multer": "^0.1.8",
+    "request": "^2.55.0",
+    "lodash": "~3.8.0",
+    "ejs": "^2.3.1",
+    "composable-middleware": "^0.3.0",
+    "log4js": "0.6.22",
+    "caller-id": "0.1.0",
+    "http-proxy": "1.11.1",
+    "node-cache": "~2.1.1",
+    "array-query": "^0.1.1",
+    "form-data": "0.2.0",
+    "async": "1.2.0",
+    "node-uuid": "^1.0.0",
     "method-override": "~1.0.0",
     "serve-favicon": "~2.0.1",
     "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
+    "cookie-session": "1.1.0",
+    "passport": "~0.2.0",
+    "passport-oauth2": "1.1.2",
     "errorhandler": "~1.0.0",
-    "compression": "~1.0.1",
-    "lodash": "~2.4.1",
-    "ejs": "~0.8.4",
-    "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.4.1"
+    "compression": "~1.0.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-wiredep": "~1.8.0",
-    "grunt-concurrent": "~0.5.0",
+    "grunt-concurrent": "1.0.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -38,7 +49,7 @@
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
     "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "~0.1.5",
+    "grunt-node-inspector": "0.2.0",
     "grunt-nodemon": "~0.2.0",
     "grunt-angular-templates": "^0.5.4",
     "grunt-dom-munger": "^3.4.0",
