--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -23,7 +23,7 @@
     "angular-resource": "~1.2.16",
     "angular-ui-router": "~0.2.13",
     "angular-ui-utils": "~0.2.3",
-    "ui-router-extras": "~0.0.13",
+    "ui-router-extras": "0.0.13",
     "requirejs": "~2.1.17",
     "angularAMD": "~0.2.1",
     "angular-messages": "~1.3.15",
