--- a/central-js2/bower.json
+++ b/central-js2/bower.json
@@ -2,24 +2,26 @@
   "name": "central-js",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.2.*",
+    "angular": "1.3.15",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
     "bootstrap-sass-official": "~3.1.1",
-    "bootstrap": "~3.1.1",
+    "bootstrap": "~3.3.4",
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
-    "angular-bootstrap": "~0.11.0",
+    "angular-bootstrap": "~0.12.1",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
+    "angular-ui": "~0.4.0",
     "angular-ui-router": "~0.2.10",
     "angular-i18n": "~1.4.1",
     "angular-messages": "~1.4.1",
     "jquery.cookie": "~1.4.1",
     "ng-clip": "~0.2.6",
-    "zeroclipboard": "~2.2.0"
+    "zeroclipboard": "~2.2.0",
+    "angular-ui-utils": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
