--- a/central-js/package.json
+++ b/central-js/package.json
@@ -26,7 +26,8 @@
     "passport": "~0.2.0",
     "passport-oauth2": "1.1.2",
     "errorhandler": "~1.0.0",
-    "compression": "~1.0.1"
+    "compression": "~1.0.1",
+    "js-yaml": "~3.3.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
