--- a/central-js/package.json
+++ b/central-js/package.json
@@ -27,7 +27,8 @@
     "passport-oauth2": "1.1.2",
     "errorhandler": "~1.0.0",
     "compression": "~1.0.1",
-    "js-yaml": "~3.3.1"
+    "js-yaml": "~3.3.1",
+    "whet.extend": "~0.9.9"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
